Security (#4)
* Credentials and tests fixtures

* Imoprove validator tests to be more generic

* refactoring api adapter

* fix

* fix

* working on security

* fixing tests

* auth config

* refactoring...

* more refactoring

* more

* more

* refactoring ...

* fixing exisitng tests

* SingIn integration tests

* SignUp integration tests

* fixing tests

* jwt auth comming together

* moving forward

* readme changes

* optimizing get by username

* fix

* docker hub login ci

* timeout fix

* fix

* race fix timeout

* fix race

---------
